// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ceramic API Caip10Link test Anchoring works 1`] = `
Object {
  "anchorProof": Object {
    "blockNumber": 1538352000,
    "blockTimestamp": 1538352000,
    "chainId": "inmemory:12345",
    "root": Object {
      "codec": "dag-cbor",
      "hash": Object {
        "data": Array [
          18,
          32,
          229,
          176,
          48,
          192,
          205,
          137,
          197,
          20,
          241,
          17,
          15,
          129,
          180,
          140,
          255,
          21,
          252,
          188,
          85,
          59,
          212,
          117,
          82,
          224,
          83,
          124,
          14,
          246,
          35,
          182,
          37,
          2,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
    "txHash": Object {
      "codec": "eth-tx",
      "hash": Object {
        "data": Array [
          27,
          32,
          24,
          49,
          225,
          228,
          11,
          171,
          49,
          208,
          15,
          26,
          103,
          65,
          213,
          144,
          208,
          238,
          98,
          25,
          53,
          119,
          40,
          180,
          18,
          220,
          137,
          238,
          244,
          57,
          124,
          243,
          123,
          170,
        ],
        "type": "Buffer",
      },
      "version": 1,
    },
  },
  "anchorStatus": 3,
  "content": "did:key:z6MkjKeH8SgVAYCvTBoyxx7uRJFGM2a9HUeFwfJfd6ctuA3X",
  "log": Array [
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          5,
          32,
          215,
          247,
          53,
          143,
          227,
          108,
          159,
          154,
          143,
          215,
          43,
          74,
          254,
          203,
          21,
          230,
          131,
          129,
          66,
          82,
          55,
          15,
          79,
          30,
          195,
          28,
          72,
          18,
          86,
          7,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          107,
          71,
          236,
          235,
          89,
          104,
          223,
          224,
          130,
          181,
          71,
          133,
          185,
          48,
          116,
          17,
          76,
          66,
          253,
          254,
          255,
          171,
          175,
          0,
          182,
          227,
          224,
          16,
          13,
          24,
          217,
          112,
        ],
        "version": 1,
      },
      "type": 2,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          229,
          176,
          48,
          192,
          205,
          137,
          197,
          20,
          241,
          17,
          15,
          129,
          180,
          140,
          255,
          21,
          252,
          188,
          85,
          59,
          212,
          117,
          82,
          224,
          83,
          124,
          14,
          246,
          35,
          182,
          37,
          2,
        ],
        "version": 1,
      },
      "type": 1,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          74,
          140,
          226,
          217,
          56,
          156,
          130,
          60,
          157,
          2,
          227,
          159,
          146,
          233,
          23,
          74,
          170,
          81,
          249,
          131,
          159,
          213,
          114,
          209,
          130,
          62,
          183,
          227,
          211,
          120,
          246,
          50,
        ],
        "version": 1,
      },
      "type": 2,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x0544dCF4Fce959C6C4F3b7530190cb5E1BD67cB1@eip155:1",
    ],
    "family": "caip10-eip155:1",
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create and link DID 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          158,
          159,
          203,
          3,
          48,
          101,
          254,
          31,
          134,
          132,
          17,
          72,
          253,
          98,
          197,
          77,
          224,
          41,
          165,
          176,
          185,
          165,
          5,
          206,
          114,
          185,
          94,
          97,
          22,
          106,
          212,
          228,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          230,
          114,
          170,
          117,
          160,
          146,
          50,
          115,
          9,
          120,
          69,
          24,
          140,
          252,
          108,
          187,
          115,
          136,
          154,
          130,
          58,
          61,
          40,
          8,
          153,
          97,
          144,
          10,
          191,
          125,
          217,
          19,
        ],
        "version": 1,
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x0544DCf4fcE959C6c4F3b7530190cb5e1Bd67cb7@eip155:1",
    ],
    "family": "caip10-eip155:1",
  },
  "next": Object {
    "content": "did:key:z6MkjKeH8SgVAYCvTBoyxx7uRJFGM2a9HUeFwfJfd6ctuA3X",
    "metadata": Object {
      "controllers": Array [
        "0x0544DCf4fcE959C6c4F3b7530190cb5e1Bd67cb7@eip155:1",
      ],
      "family": "caip10-eip155:1",
      "lastUpdate": undefined,
    },
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create from valid account id 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "codec": "dag-cbor",
        "hash": Uint8Array [
          18,
          32,
          191,
          178,
          50,
          49,
          195,
          2,
          202,
          113,
          224,
          155,
          41,
          78,
          92,
          134,
          4,
          214,
          208,
          136,
          235,
          55,
          220,
          93,
          107,
          231,
          233,
          149,
          119,
          80,
          177,
          117,
          134,
          67,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x0544DcF4fcE959C6C4F3b7530190cB5E1BD67Cb8@eip155:1",
    ],
    "family": "caip10-eip155:1",
  },
  "next": Object {
    "content": null,
  },
  "signature": 0,
  "type": 1,
}
`;
